--- a/team/css/team.css
+++ b/team/css/team.css
@@ -1,32 +1,22 @@
-.board {
-    width: 400px;
-    height: 400px;
-    margin-left: 50px;
-    margin-top: 50px;
-    border-collapse: collapse;
+body {
+    font-family: "Arial", sans-serif;
 }
-
-.board tr {
+section {
     text-align: center;
-    font-weight: 700;
-    font-family: sans-serif;
-    font-size: 48px;
 }
-
-.board td {
-    border-right: 1px solid;
-    border-bottom: 1px solid;
-    width: 33.3%;
-    height: 33.3%;
+.game--container {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    width: 306px;
+    margin: 50px auto;
 }
-
-.board td:last-child {
-    border-right: 0;
-}
-
-.board tr:last-child td {
-    border-bottom: 0;
-}
-#reset {
-    margin-left: 50px;
+.cell {
+    font-family: "Permanent Marker", cursive;
+    width: 100px;
+    height: 100px;
+    box-shadow: 0 0 0 1px #333333;
+    border: 1px solid #333333;
+    cursor: pointer;
+line-height: 100px;
+    font-size: 60px;
 }
