--- a/css/todo.css
+++ b/css/todo.css
@@ -37,25 +37,10 @@ input {
     padding-right: 10px;
 }
 
-/* :root {
-    --background-color: #0B0C10;
-    --text-color: #66FCF1;
-    --accent1-color: #1F2833;
-    --link-color: #C5C6C7;
-    --accent2-color: #45129E;
-} */
-/* 
-:root {
-    --background-color: #1A1A1D;
-    --text-color: #C3073F;
-    --accent1-color: #950740;
-    --link-color: #4E4E50;
-    --accent2-color: #6F2232;
-} */
 
 :root {
-    --background-color: #61892F;
-    --text-color: #86C232;
+    --background-color: #182865;
+    --text-color: white;
     --accent1-color: #474B4F;
     --link-color: #222629;
     --accent2-color: #6B6E70;
@@ -72,7 +57,7 @@ body {
     max-width:700px;
     align-items: center;
     margin: 0 auto;
-    font-family: 'Orbitron', cursive;
+    font-family: 'Montserrat', sans-serif;
 }
 
 header {
@@ -88,11 +73,6 @@ header h1 {
     padding: 20px;
 }
 
-.profilepic{
-    width:120px;
-    filter: grayscale(50%);
-    padding: 10px;
-}
 
 main {
     margin-left:20px;
